<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="applogin_name">Firebase Authentication</string>

  <string name="label_google_sign_in">Firebase + Google Sign In</string>
  <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

  <string name="label_facebook_login">Firebase + Facebook Login</string>
  <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

  <string name="label_twitter_login">Firebase + Twitter Login</string>
  <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

  <string name="label_email_password">Email/Password Authentication</string>
  <string name="desc_email_password">Use an email and password to authenticate with Firebase.</string>

  <string name="label_password_less">Passwordless Authentication</string>
  <string name="desc_password_less">Use only an email to authenticate with Firebase.</string>

  <string name="label_phone_auth">Phone Number Authentication</string>
  <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

  <string name="label_anonymous_auth">Anonymous Authentication</string>
  <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

  <string name="label_custom_auth">Custom Authentication</string>
  <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

  <string name="label_firebase_ui">FirebaseUI Auth</string>
  <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

  <string name="label_generic_idp">Generic IDP Auth</string>
  <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

  <string name="hint_user_id">User ID</string>
  <string name="get_custom_token">Get Token</string>
  <string name="sign_in">Sign In</string>
  <string name="create_account">Create Account</string>
  <string name="send_link">Send Link</string>
  <string name="sign_out">Sign Out</string>
  <string name="verify_email">Verify Email</string>
  <string name="disconnect">Disconnect</string>
  <string name="loading">Loading…</string>
  <string name="custom_token">Custom Token</string>
  <string name="signed_in">Signed In</string>
  <string name="signed_out">Signed Out</string>
  <string name="token_null">Token: null</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="desc_firebase_lockup">Firebase logo and name</string>
  <string name="auth_failed">Authentication failed</string>
  <string name="start_phone_auth">Start</string>
  <string name="verify_phone_auth">Verify</string>
  <string name="resend_phone_auth">Resend</string>
  <string name="hint_phone_number">Phone Number</string>
  <string name="hint_verification_code">Verification Code</string>
  <string name="status_code_sent">Code Sent</string>
  <string name="status_verification_failed">Verification failed</string>
  <string name="status_verification_succeeded">Verification succeeded</string>
  <string name="status_sign_in_failed">Sign-in failed</string>
  <string name="instant_validation">(instant validation)</string>

  <string name="firebase_status_fmt">Firebase User: %s</string>
  <string name="firebase_user_management">Firebase User Management</string>

  <string name="google_status_fmt">Google User: %s</string>
  <string name="google_title_text">Google Sign In</string>

  <string name="facebook_status_fmt">Facebook User: %s</string>
  <string name="facebook_title_text">Facebook Login</string>

  <string name="email_password_status_fmt">Email User: %1$s (verified: %2$b)</string>
  <string name="login_with_email_password_title_text">Email and Password</string>

  <string name="password_less_status_fmt">Email User: %1$s (verified: %2$b)</string>
  <string name="password_less_title_text">Passwordless Sign In</string>
  <string name="status_email_not_sent">Send link to your email to get started.</string>
  <string name="status_email_sent">Link sent, check your email to continue.</string>
  <string name="status_link_found">Link received, enter email to sign in.</string>

  <string name="phone_title_text">Phone Number</string>

  <string name="twitter_status_fmt">Twitter User: %s</string>
  <string name="twitter_title_text">Twitter Login</string>

  <string name="firebase_ui_status_fmt">Firebase User: %s</string>
  <string name="firebase_ui_title_text">FirebaseUI Auth</string>

  <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
  <string name="microsoft_status_fmt">Microsoft User: %s</string>

  <string name="id_fmt">User ID: %s</string>
  <string name="email_fmt">Email: %s</string>

  <string name="app_name">Multifacette</string>
  <string name="string_press_me">TOUCHEZ MOI</string>
  <string name="string_wait4dl">Téléchargement en cours</string>

  <string name="string_choose2word">Pressez deux boutons</string>
  <string name="buttonLabel_smart">intelligente</string>
  <string name="buttonLabel_lovely">affectueuse</string>
  <string name="buttonLabel_fun">drôle</string>
  <string name="buttonLabel_sportive">sportive</string>
  <string name="buttonLabel_natural">naturelle</string>
  <string name="buttonLabel_sexy">sexy</string>
  <string name="buttonLabel_surprising">spontanée</string>
  <string name="buttonLabel_romantic">romantique</string>
  <string name="buttonLabel_pretty">jolie</string>
  <string name="buttonLabel_seductive">séduisante</string>
  <string name="buttonLabel_hungry">gourmande</string>
  <string name="buttonLabel_polite">polie</string>
  <string name="buttonLabel_feminine">féminine</string>
  <string name="buttonLabel_tenderly">tendre</string>
  <string name="buttonLabel_kind">gentille</string>
  <string name="buttonLabel_strong">forte</string>
  <string name="portrait_de_julia">portrait de julia</string>
  <string name="dl_progressText">Téléchargement en cours</string>
  <string name="pleaseRestartWithInternet">activez le wifi</string>
  <string name="files">fichiers</string>
  <string name="pleaseCheckFiles">Vérifier les photos</string>
  <string name="pleaseRepairFiles">Récupérer les photos manquantes*</string>
  <string name="checkJSONinProgress" tools:keep="@string/checkJSONinProgress">Vérification de la liste de fichiers en cours</string>
  <string name="updatedJsonOK">Liste de fichiers bien mise à jour</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title" tools:keep="@string/reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="showSettingsImageButton">accéder aux réglages de l\'application</string>
  <string name="settings1">paramètre 1</string>
  <string name="settings2">paramètre 2</string>
  <string name="downloadError">Erreur de téléchargement, vérifier le wifi et relancer l\'application</string>

</resources>
