<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:keep="@xml/root_preferences">

  <EditTextPreference
      android:defaultValue="Default value"
      android:key="edit_text_preference_1"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:title="Edit text preference" />

  <PreferenceCategory app:title="@string/messages_header">

    <EditTextPreference
        app:key="signature"
        app:title="@string/signature_title"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="edit_text_preference_2"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Edit text preference" />

  </PreferenceCategory>
  <PreferenceCategory app:title="@string/sync_header">

    <SwitchPreference
        app:key="sync"
        app:title="@string/sync_title" />

    <SwitchPreference
        app:dependency="sync"
        app:key="attachment"
        app:summaryOff="@string/attachment_summary_off"
        app:summaryOn="@string/attachment_summary_on"
        app:title="@string/attachment_title" />

  </PreferenceCategory>

</PreferenceScreen>