<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:weightSum="4"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_with_email_password_title_text"
        />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/signed_out"
        />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        tools:text="Firebase User ID: 123456789abc"
        />

  </LinearLayout>


  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:gravity="center_vertical"
      >

    <LinearLayout
        android:id="@+id/emailPasswordFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

      <EditText
          android:id="@+id/fieldEmail"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/hint_email"
          android:inputType="textEmailAddress"
          android:autofillHints=""
          />

      <EditText
          android:id="@+id/fieldPassword"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/hint_password"
          android:inputType="textPassword"
          android:autofillHints=""
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailPasswordButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailPasswordFields"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

      <Button
          android:id="@+id/emailSignInButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/sign_in"
          style="@style/Widget.AppCompat.Button.Colored"
          />

      <Button
          android:id="@+id/emailCreateAccountButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/create_account"
          style="@style/Widget.AppCompat.Button.Colored"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signedInButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:weightSum="2.0"
        >

      <Button
          android:id="@+id/signOutButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          android:text="@string/sign_out"
          style="@style/Widget.AppCompat.Button.Colored"
          />

      <Button
          android:id="@+id/verifyEmailButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          android:text="@string/verify_email"
          style="@style/Widget.AppCompat.Button.Colored"
          />

    </LinearLayout>

  </RelativeLayout>

</LinearLayout>
