<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startupScreenLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".StartupFragment"
    android:theme="@style/AppTheme.Accent"

    android:gravity="center|top"
    android:orientation="vertical" >


    <Button
        android:id="@+id/checkFilesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/ic_button_on_off"
        android:clickable="false"
        android:enabled="false"
        android:shadowColor="@color/OurWhite"
        android:text="@string/pleaseCheckFiles"
        android:visibility="gone"

        />
    <Button
        android:id="@+id/repairFilesButton"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@drawable/ic_button_on_off"
        android:enabled="true"
        android:shadowColor="@color/OurWhite"
        android:text="@string/pleaseRepairFiles"
        android:theme="@style/AppTheme.Accent"
        style="?android:attr/borderlessButtonStyle"
        />


  <LinearLayout

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:visibility="visible"
      >
    <ImageButton
        android:id="@+id/settingsImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/showSettingsImageButton"
        android:gravity="start"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:minHeight="30dp"

        android:minWidth="30dp"


        android:src="@mipmap/ic_settings"

        />
    <ImageButton
        android:id="@+id/aboutImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/showSettingsImageButton"
        android:gravity="end"
        android:maxHeight="20dp"
        android:maxWidth="20dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        android:src="@mipmap/ic_info"

        />
    <ImageButton
        android:id="@+id/loginImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/showSettingsImageButton"
        android:gravity="end"
        android:maxHeight="20dp"
        android:maxWidth="20dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        android:src="@mipmap/ic_login"

        />
  </LinearLayout>

    <ProgressBar
        android:id="@+id/uiTotalFilesProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="false"
        android:max="132"
        android:maxHeight="120dp"
        android:maxWidth="120dp"
        android:minHeight="60dp"
        android:minWidth="60dp"

        android:progressDrawable="@drawable/ring_progress_bar"
        android:soundEffectsEnabled="false"
        android:visibility="gone"

        />
    <ProgressBar
        android:id="@+id/uiVerticalMissingProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:indeterminateDrawable="@drawable/white_horizontal_progress_bar"
        android:indeterminateTint="@color/OurWhite"
        android:progressTint="@color/OurPink"
        android:theme="@style/AppTheme.Accent"
        style="?android:attr/progressBarStyleHorizontal"

        />
    <TextView
        android:id="@+id/ui_dl_progressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Vérification en cours"
        android:textSize="30dp"
        tools:ignore="SpUsage"
        />
  </LinearLayout>

