<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nosedive"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FullscreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/OurGray"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/debug_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >


            <ProgressBar
                android:id="@+id/ui_dl_ProgressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                />

            <TextView
                android:id="@+id/ui_dl_progressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dl_progressText" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/leftMenuLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"


                android:visibility="gone">

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ui_centralLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/portrait_de_julia"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_app2" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/rightMenuLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"

                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-00dp"
        android:background="@color/OurPink"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:id="@+id/fakeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="5dp"

            android:orientation="horizontal"
            android:visibility="gone">

        </LinearLayout>

        <TextView
            android:id="@+id/ui_press_meTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:text="@string/string_press_me"
            android:textSize="30sp"

            />

    </LinearLayout>

</merge>
